# ilixi-examples

./: Makefile.am  Makefile.in  README  TODO  configure  configure.ac
src/: Makefile.am  Makefile.in
src/hello_world/: HelloWorld.cpp  HelloWorld.h  Makefile.am  Makefile.in
src/media_player/: Makefile.am  Makefile.in  MediaPlayer.cpp  MediaPlayer.h
src/monitor/: Makefile.am  Makefile.in  Monitor.cpp  Monitor.h
src/widget_gallery/: Makefile.am  Makefile.in  WidgetGallery.cpp  WidgetGallery.h
